[package]
name = "jsc-sys"
version = "0.1.0"
authors = ["Yusuke Suzuki <utatane.tea@gmail.com>"]
links = "JavaScriptCore"
build = "build.rs"
license = "BSD"
readme = "jsc-sys/README.md"
homepage = "https://github.com/Constellation/rust-jsc"
repository = "https://github.com/Constellation/rust-jsc.git"
description = "WebKit JavaScriptCore bundle"
exclude = [
    "WebKit/LayoutTests/*",
    "WebKit/PerformanceTests/*",
    "WebKit/ManualTests/*",
    "WebKit/WebKitBuild/*",
    "WebKit/Source/JavaScriptCore/tests/*",
]

[lib]
name = "jsc_sys"
path = "lib.rs"
crate-type = ["dylib"]

[build-dependencies]
pkg-config = "0.3"
