[package]
name = "jsc-sys"
version = "0.1.0"
authors = ["Yusuke Suzuki <utatane.tea@gmail.com>"]
links = "JavaScriptCore"
build = "build.rs"
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/Constellation/rust-jsc"
repository = "https://github.com/Constellation/rust-jsc.git"
description = "WebKit JavaScriptCore bundle"
exclude = [
    "WebKit/Examples/*",
    "WebKit/LayoutTests/*",
    "WebKit/ManualTests/*",
    "WebKit/PerformanceTests/*",
    "WebKit/Source/WebCore/*",
    "WebKit/Source/WebKit/*",
    "WebKit/Source/WebKit2/*",
    "WebKit/Source/JavaScriptCore/tests/*",
    "WebKit/WebKitBuild/*",
    "WebKit/Websites/*",
]

[lib]
name = "jsc_sys"
path = "lib.rs"
crate-type = ["dylib"]

[build-dependencies]
pkg-config = "0.3"
