[package]
name = "jsc-sys"
version = "0.1.2+r201969"
authors = ["Yusuke Suzuki <utatane.tea@gmail.com>"]
links = "JavaScriptCore"
build = "build.rs"
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/Constellation/rust-jsc"
repository = "https://github.com/Constellation/rust-jsc.git"
description = "WebKit JavaScriptCore bundle"
exclude = [
    "WebKit/Examples/*",
    "WebKit/LayoutTests/*",
    "WebKit/ManualTests/*",
    "WebKit/PerformanceTests/*",
    "WebKit/Source/JavaScriptCore/tests/*",
    "WebKit/Source/ThirdParty/ANGLE",
    "WebKit/Source/ThirdParty/brotli",
    "WebKit/Source/ThirdParty/qunit",
    "WebKit/Source/ThirdParty/woff2",
    "WebKit/Source/WebCore/*",
    "WebKit/Source/WebKit/*",
    "WebKit/Source/WebKit2/*",
    "WebKit/Source/WebInspectorUI/*",
    "WebKit/**/ChangeLog*",
    "WebKit/**/*xcodeproj/*",
    "WebKit/Tools/WebKitTestRunner/*",
    "WebKit/Tools/WebKitLauncher/*",
    "WebKit/Tools/BuildSlaveSupport/*",
    "WebKit/Tools/MiniBrowser/*",
    "WebKit/Tools/TestResultServer/*",
    "WebKit/Tools/DumpRenderTree/*",
    "WebKit/Tools/iExploder/*",
    "WebKit/Tools/CygwinDownloader/*",
    "WebKit/WebKitBuild/*",
    "WebKit/WebKitLibraries/*",
    "WebKit/Websites/*",
]

[lib]
name = "jsc_sys"
path = "lib.rs"

[build-dependencies]
pkg-config = "0.3"
